--- a/my-draggable-app/package.json
+++ b/my-draggable-app/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.15.1",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
     "pinia": "^3.0.1",
@@ -41,5 +43,10 @@
     "vitest": "^3.0.5",
     "vue": "^3.5.13",
     "vue-tsc": "^2.2.2"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
